--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "ChickenChamp71",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "heroku": "^7.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ChickenChamp71/note-taker-ga.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ChickenChamp71/note-taker-ga/issues"
+  },
+  "homepage": "https://github.com/ChickenChamp71/note-taker-ga#readme"
 }
