--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "express-favicon": "^2.0.4",
     "heroku": "^7.3.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ChickenChamp71/note-taker-ga.git"
